#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-12-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999978 released.

        * Fixed minor bug in changes for Version 0.99999977.


2013-12-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999977 released.

        * Updated Makefile.PL to do more thorough requirements
          testing for legacy Cygwin installations.


2013-12-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999976 released.

        * Updated Makefile.PL to do more thorough requirements
          testing for legacy Cygwin installations.


2013-12-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999975 released.

        * Merry Christmas!

        * Updated Makefile.PL to accomodate both Cygwin
          and Cygwin64 setups.


2013-12-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999974 released.

        * Merry Christmas!

        * Updated Makefile.PL to accomodate latest Cygwin
          changes for gcc and vim and emacs.


2013-12-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999973 released.

        * Complete Import from Remote Host.


2013-12-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999972 released.

        * fa_global.pm included in -V output.

        * New version of Term::Menus paired with this release.


2013-12-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999971 released.

        * Implemented FA_Sudo to enable a user to emulate
          another user. Useful for schedulers that run as