@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 066fd344fa7369932ff921154905011829dae779 ChangeLog
+SHA1 e5aa70cd4b52aba815b4072f5f4a94ac7e19df4b ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1d292a0e6dba2ce264985cc3004ff0dc9b298bfc MANIFEST
-SHA1 547a250e39a93d282b4c5a815517849db94e8806 META.yml
-SHA1 531639740097e3bfada43eb8f9bedecc77cb0942 Makefile.PL
+SHA1 c9e6516869e8ac4409ad35be26f21b6be963ec8b META.yml
+SHA1 dac8a4ad33a56d19ab905f84c3ed6a9fef057485 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 a6e007f1056d6fb4aa4e9d94707740c364f074a7 bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 c2bff9171d1c420d739d77c4dd6e43a548f0ab20 lib/Net/FullAuto.pm
+SHA1 f7fed6ecf307d834e44dbc8a79ac3e759a442d22 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,17 +48,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 9a9ea003c7384efa72ba8bd1db63184e15ebb667 lib/Net/FullAuto/FA_Core.pm
+SHA1 654ecb8dd8d9a529256f6eea984ded8d93faf5df lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSvlV3AAoJEBa/9Pad787E3uUH/1QtvjlsHKXhE7aqE237qI6E
-pXxlIePr7UB3Z4mTvBHHZWn709ll8x9SmnnSosbEHgqrcuR7aFMVNkkKT2CCNW1S
-NgFdCU7TqNJX7V3jk3FCKBBH8VmP+ZJf5n8Gh2cpfqHOeT7E4CeTREM67ba7bFHX
-Z+llLvJk/TEycO0gabPBe/asvN2tLzfTfj45lA9q5yc6ub30Wq1b3Q53ht8H1av5
-Yg/HjMoFaKdiW+r31qSno7I3bHrxYAuawkD2bX995+L0RjbbysuOQD6fnapQsmb/
-eIREb8upiPbb98O8LMd38D3mcEqhuW1lYTYUhPSz49xwsUBqKO2998lBAZmYFlI=
-=dHG8
+iQEcBAEBAgAGBQJSvv5pAAoJEBa/9Pad787EWhIH+wZZD2d0vWqKA0wkYQwkAoe6
+rC/PhxkOUfHqLswhfboG63jNzmRmP2DzBG+QiZBm6s0v8qgK6bl2mgFPwGNBO2OS
+Z82O028VbD841NgQQwwpZkRngRif6LzaVaBDLh+v8TqphB6ro7aPn4qhuENW7UvB
+lqN1ckgx4pzmydqI+BC9KSXT92YHTUzZAw1bVZjV86XLjk7/nC0M/WESJ4q8Caxw
+z2ELNG87V1ogD/MXiMXOUYJ0E57/D0WiNimstCs8XaHZtwC8TLFScamGlMZl9r1r
+QOeURgcKvssm9s//t7QjdsGvylDgETLSf7VOcwTyuOW9njR+uN0N/5LGbLwASDY=
+=NGbW
 -----END PGP SIGNATURE-----
