@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999978';
+our $VERSION='0.99999979';
 
 
 use 5.005;
